# urlshortener

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: 01_setup.md  02_api.md  03_config.md  04_development.md  05_observability.md
infra/: alertmanager.yml  alerts.yml  prometheus.yml
infra/grafana/provisioning/dashboards/: provider.yml  urlshortener.json
src/urlshortener/: __main__.py  api.py  app.py  config.py  metrics.py  storage.py
tests/: test_app.py
