[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlshortener"
version = "0.1.0"
description = "A simple URL shortener service."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abin M" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "httpx>=0.27",
]

[project.scripts]
urlshortener = "urlshortener.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "--cov=urlshortener --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
