[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bh_urlshortener"
dynamic = ["version"]
description = "A simple URL shortener service."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abin M" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "httpx>=0.27",
]

[project.scripts]
urlshortener = "urlshortener.__main__:main"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "--cov=urlshortener --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
